Fix nav bar not taking up full window width on smaller screens

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,4 +4,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 1;
+  box-sizing: border-box;
+  overflow: hidden;
 }
